tests/snapshots/yaml_suite_snapshots__yaml_suite_U99R_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Invalid comma in tag
  from: "@perlpunk"
  tags: error tag
  fail: true
  yaml: "- !!str, xxx\n"
  tree: "+STR\n +DOC\n  +SEQ\n"
