tests/snapshots/yaml_suite_snapshots__yaml_suite_U99R_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Invalid comma in tag
  tags: error tag
  tree: "+STR\n +DOC\n  +SEQ\n"
  yaml: "- !!str, xxx\n"
