tests/snapshots/yaml_suite_snapshots__yaml_suite_U9NS_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 2.8. Play by Play Feed from a Game
  from: "http://www.yaml.org/spec/1.2/spec.html#id2760519"
  tags: spec header
  yaml: "---\ntime: 20:03:20\nplayer: Sammy Sosa\naction: strike (miss)\n...\n---\ntime: 20:03:47\nplayer: Sammy Sosa\naction: grand slam\n...\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :time\n   =VAL :20:03:20\n   =VAL :player\n   =VAL :Sammy Sosa\n   =VAL :action\n   =VAL :strike (miss)…"
  json: "{\n  \"time\": \"20:03:20\",\n  \"player\": \"Sammy Sosa\",\n  \"action\": \"strike (miss)\"\n}\n{\n  \"time\": \"20:03:47\",\n  \"player\": \"Sammy Sosa\"…"
