tests/snapshots/yaml_suite_snapshots__yaml_suite_UDM2_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- url: http://example.org\n"
  from: "https://github.com/yaml/libyaml/pull/28"
  json: "[\n  {\n    \"url\": \"http://example.org\"\n  }\n]\n"
  name: Plain URL in flow mapping
  tags: flow scalar
  tree: "+STR\n +DOC\n  +SEQ\n   +MAP {}\n    =VAL :url\n    =VAL :http://example.org\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- { url: http://example.org }\n"
