tests/snapshots/yaml_suite_snapshots__yaml_suite_UDR7_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 5.4. Flow Collection Indicators
  from: "http://www.yaml.org/spec/1.2/spec.html#id2772813"
  tags: spec flow sequence mapping
  yaml: "sequence: [ one, two, ]\nmapping: { sky: blue, sea: green }\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :sequence\n   +SEQ []\n    =VAL :one\n    =VAL :two\n   -SEQ\n   =VAL :mapping\n   +MAP {}\n    =VAL :sky\n    =VAL :blue\n  …"
  json: "{\n  \"sequence\": [\n    \"one\",\n    \"two\"\n  ],\n  \"mapping\": {\n    \"sky\": \"blue\",\n    \"sea\": \"green\"\n  }\n}\n"
  dump: "sequence:\n- one\n- two\nmapping:\n  sky: blue\n  sea: green\n"
