tests/snapshots/yaml_suite_snapshots__yaml_suite_UDR7_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "sequence:\n- one\n- two\nmapping:\n  sky: blue\n  sea: green\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2772813"
  json: "{\n  \"sequence\": [\n    \"one\",\n    \"two\"\n  ],\n  \"mapping\": {\n    \"sky\": \"blue\",\n    \"sea\": \"green\"\n  }\n}\n"
  name: Spec Example 5.4. Flow Collection Indicators
  tags: spec flow sequence mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :sequence\n   +SEQ []\n    =VAL :one\n    =VAL :two\n   -SEQ\n   =VAL :mapping\n   +MAP {}\n    =VAL :sky\n    =VAL :blue\n    =VAL :sea\n    =VAL :green\n   -MAP\n  -MAP\n -DOC\n-STR\n"
  yaml: "sequence: [ one, two, ]\nmapping: { sky: blue, sea: green }\n"
