tests/snapshots/yaml_suite_snapshots__yaml_suite_UGM3_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 2.27. Invoice
  from: "http://www.yaml.org/spec/1.2/spec.html#id2761823"
  tags: spec tag literal mapping sequence alias unknown-tag
  yaml: "--- !<tag:clarkevans.com,2002:invoice>\ninvoice: 34843\ndate   : 2001-01-23\nbill-to: &id001\n    given  : Chris\n    family : Dumars\n    address:\n        lines: |\n            458 Walkman Dr.\n            Suite #292\n        city    : Royal Oak\n        state   : MI\n        postal  : 48046\nship-to: *id001\nproduct:\n    - sku         : BL394D\n      quantity    : 4\n      description : Basketball\n      price       : 450.00\n    - sku         : BL4438H\n      quantity    : 1\n      description : Super Hoop\n      price       : 2392.00\ntax  : 251.42\ntotal: 4443.52\ncomments:\n    Late afternoon is best.\n    Backup contact is Nancy\n    Billsmer @ 338-4338.\n"
  tree: "+STR\n +DOC ---\n  +MAP <tag:clarkevans.com,2002:invoice>\n   =VAL :invoice\n   =VAL :34843\n   =VAL :date\n   =VAL :2001-01-23\n   =VAL :bill-to\n   +MAP &id001\n    =VAL :given\n    =VAL :Chris\n    =VAL :family\n    =VAL :Dumars\n    =VAL :address\n    +MAP\n     =VAL :lines\n     =VAL |458 Walkman Dr.\\nSuite #292\\n\n     =VAL :city\n     =VAL :Royal Oak\n     =VAL :state\n     =VAL :MI\n     =VAL :postal\n     =VAL :48046\n    -MAP\n   -MAP\n   =VAL :ship-to\n   =ALI *id001\n   =VAL :product\n   +SEQ\n    +MAP\n     =VAL :sku\n     =VAL :BL394D\n     =VAL :quantity\n     =VAL :4\n     =VAL :description\n     =VAL :Basketball\n     =VAL :price\n     =VAL :450.00\n    -MAP\n    +MAP\n     =VAL :sku\n     =VAL :BL4438H\n     =VAL :quantity\n     =VAL :1\n     =VAL :description\n     =VAL :Super Hoop\n     =VAL :price\n     =VAL :2392.00\n    -MAP\n   -SEQ\n   =VAL :tax\n   =VAL :251.42\n   =VAL :total\n   =VAL :4443.52\n   =VAL :comments\n   =VAL :Late afternoon is best. Backup contact is Nancy Billsmer @ 338-4338.\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"invoice\": 34843,\n  \"date\": \"2001-01-23\",\n  \"bill-to\": {\n    \"given\": \"Chris\",\n    \"family\": \"Dumars\",\n    \"address\": {\n      \"lines\": \"458 Walkman Dr.\\nSuite #292\\n\",\n      \"city\": \"Royal Oak\",\n      \"state\": \"MI\",\n      \"postal\": 48046\n    }\n  },\n  \"ship-to\": {\n    \"given\": \"Chris\",\n    \"family\": \"Dumars\",\n    \"address\": {\n      \"lines\": \"458 Walkman Dr.\\nSuite #292\\n\",\n      \"city\": \"Royal Oak\",\n      \"state\": \"MI\",\n      \"postal\": 48046\n    }\n  },\n  \"product\": [\n    {\n      \"sku\": \"BL394D\",\n      \"quantity\": 4,\n      \"description\": \"Basketball\",\n      \"price\": 450\n    },\n    {\n      \"sku\": \"BL4438H\",\n      \"quantity\": 1,\n      \"description\": \"Super Hoop\",\n      \"price\": 2392\n    }\n  ],\n  \"tax\": 251.42,\n  \"total\": 4443.52,\n  \"comments\": \"Late afternoon is best. Backup contact is Nancy Billsmer @ 338-4338.\"\n}\n"
  dump: "--- !<tag:clarkevans.com,2002:invoice>\ninvoice: 34843\ndate: 2001-01-23\nbill-to: &id001\n  given: Chris\n  family: Dumars\n  address:\n    lines: |\n      458 Walkman Dr.\n      Suite #292\n    city: Royal Oak\n    state: MI\n    postal: 48046\nship-to: *id001\nproduct:\n- sku: BL394D\n  quantity: 4\n  description: Basketball\n  price: 450.00\n- sku: BL4438H\n  quantity: 1\n  description: Super Hoop\n  price: 2392.00\ntax: 251.42\ntotal: 4443.52\ncomments: Late afternoon is best. Backup contact is Nancy Billsmer @ 338-4338.\n"
